--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ category: home
 
 <div class="intro">
 
-	<h1>DiversifyMicrobiology</h1>
+	<h1>Making Science Accessible</h1>
 
 </div>
 
@@ -18,11 +18,9 @@ category: home
 				<img class="img-responsive" src="assets/img/avatar.png" alt="DiversifyMicro Avatar"/>
 			</div>
 			<div class="col-md-8">
-				<p>Social science research has demonstrated that the human brain has evolved a strong ability to recognize and react to information but a fairly poor ability to recall information from memory. Other studies have shown that a more diverse group is generated when candidates are identified from a list, rather than selecting based purely on recall.</p> 
-				
-				<p>The DiversifyMicrobiology site aims to identify Ph.D.s in Microbiology who are women and/or from a group traditionally underrepresented or underserved in the sciences (e.g., those from racial or ethnic minorities, those with disabilities, people who identify as LGBTQIA). Our goal is to help symposium organizers, award committees, search committees, etc. identify microbiologists who might diversify their pool.</p>
+				<p></p>
 
-				<p><a href="mailto:{{ site.email }}">Contact us</a> with any questions.</p>
+				<p><a href="mailto:{{ site.email }}">Contact me</a> with any questions.</p>
 			</div>
 		</div>
 	</div>
@@ -32,25 +30,34 @@ category: home
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-4">
-				<a href="list">
-					<img src="assets/img/background.png" alt="list" class="img-responsive img-circle pic">
-					<span class="caption">DiversifyMicro List</span>
+				<a href="dei">
+					<img src="assets/img/background.png" alt="dei" class="img-responsive img-circle pic">
+					<span class="caption">Diversity, Equity, Inclusion</span>
 				</a>
 			</div>
 
 			<div class="col-md-4">
-				<a href="resources">
-					<img src="assets/img/background.png" alt="resources" class="img-responsive img-circle pic">
-					<div class="caption">Resources</div>
+				<a href="outreach">
+					<img src="assets/img/background.png" alt="outreach" class="img-responsive img-circle pic">
+					<div class="caption">Science Outreach</div>
 				</a>
 			</div>
 
 			<div class="col-md-4">
-				<a href="nominate">
-					<img src="assets/img/background.png" alt="nominate" class="img-responsive img-circle pic">
-					<div class="caption">Self-Nomination</div>
+				<a href="research">
+					<img src="assets/img/background.png" alt="research" class="img-responsive img-circle pic">
+					<div class="caption">Research</div>
 				</a>
 			</div>
+
+			<div class="col-md-4">
+				<a href="education">
+					<img src="assets/img/background.png" alt="education" class="img-responsive img-circle pic">
+					<div class="caption">Education</div>
+				</a>
+			</div>
+
+
 		</div>
 	</div>
 </div>
