drop edu bubble & fix category

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ category: home
 			<div class="col-md-4">
 				<a href="dei">
 					<img src="assets/img/background.png" alt="dei" class="img-responsive img-circle pic">
-					<span class="caption">Diversity, Equity, Inclusion</span>
+					<span class="caption">Diversity, Equity, & Inclusion</span>
 				</a>
 			</div>
 
@@ -49,14 +49,6 @@ category: home
 					<div class="caption">Research</div>
 				</a>
 			</div>
-
-			<div class="col-md-4">
-				<a href="education">
-					<img src="assets/img/background.png" alt="education" class="img-responsive img-circle pic">
-					<div class="caption">Education</div>
-				</a>
-			</div>
-
 
 		</div>
 	</div>
