add note to home page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ category: home
 				<img class="img-responsive" src="assets/img/avatar.png" alt="DiversifyMicro Avatar"/>
 			</div>
 			<div class="col-md-8">
-				<p></p>
+				<p>UNDER CONSTRUCTION!! In the meantime...</p>
 
 				<p><a href="mailto:{{ site.email }}">Contact me</a> with any questions.</p>
 			</div>
