--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ category: home
 				<img class="img-responsive" src="assets/img/avatar.png" alt="DiversifyMicro Avatar"/>
 			</div>
 			<div class="col-md-8">
-				<p>Hi there! I'm Ada Hagan, M.S., Ph.D. My background is in microbiology, but my passion is making science accessible. Follow me <a href="https://twitter.com/{{ site.twitter_username }}">on Twitter</a> to see what I'm up to and say "hi"!.</p>
+				<p>Hi there! I'm Ada Hagan, M.S., Ph.D. My background is in microbiology, but my passion is making science accessible. Follow me <a href="https://twitter.com/{{ site.twitter_username }}">on Twitter</a> to see what I'm up to and say "hi"!</p>
 			</div>
 		</div>
 	</div>
